0.2.0:

2008-03-03  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Fixed some typos.

2008-03-03  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Multiline Text Entry appendix: 
	Briefly describe use of PangoLayout and 
	pango_clutter_render_layout().
	* docs/tutorial/figures/Makefile.am: Added multiline screenshot.
	* examples/multiline_text_entry/multiline_entry.c:
	* examples/multiline_text_entry/multiline_entry.h: Simplified some more,
 	and added some comments. Did not find a way to implement up/down 
	cursor navigation.

2008-02-29  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* examples/Makefile.am:
	* examples/entry/: Added an example of ClutterEntry, though there 
	is no text about this yet.
	* examples/multiline_text_entry/: Added the start of a multi-line 
	example for the appendix, by cutting down ClutterEntry.

2008-02-28  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	Added text to the Scrolling appendix.
	* examples/Makefile.am:
	* examples/scrolling/Makefile.am:
	* examples/scrolling/main.c:
	* examples/scrolling/scrollingcontainer.c:
	* examples/scrolling/scrollingcontainer.h:
	A simple scrolling example. This is very possibly horribly wrong, 
	but this is how I will find out.

2008-02-28  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Removed the Using OpenGL Directly 
	appendix because it is covered by the Custom Actor section.

	* docs/tutorial/Makefile.am: Generate a PDF.

2008-02-28  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* examples/custom_actor/Makefile.am: distcheck fixes.
	* docs/tutorial/clutter-tut.xml: Actor sections: Mention the anchor 
	point.
	Effects section: Show the AlphaFunc diagram from the API reference.
	Behaviour section: Show the AlphaFunc+Path diagram from the API 
	reference.
	* docs/tutorial/figures/Makefile.am: Added the diagrams from 