@@ -1,3 +1,10 @@
+2008-03-06  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/clutter-tut.xml: Text Editing appendix: 
+	Add a note that the pango_clutter() function is not public API, 
+	and that you currently have to reimplement it yourself, and that 
+	this might be better in future. 
+
 0.2.0:
 
 2008-03-03  Murray Cumming  <murrayc@murrayc.com>
